feat(docker): add prod image build
