# docs/swagger.json
@@ -110,6 +110,26 @@
                     }
                 }
             }
+        },
+        "/ping": {
+            "get": {
+                "description": "Check whether the server is running",
+                "produces": [
+                    "text/plain"
+                ],
+                "tags": [
+                    "Health"
+                ],
+                "summary": "Heartbeat",
+                "responses": {
+                    "200": {
+                        "description": ".",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
